--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.7.0",
     "joi-oid": "^1.1.2",
     "jsonwebtoken": "^9.0.0",
+    "mercadopago": "^1.5.14",
     "mongoose": "^6.8.2",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.20",
