--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "data": "node ./models/data/data.js"
   },
   "dependencies": {
+    "axios": "^1.2.5",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
